yoshimi 1.7.1 M

2020-6-5 Will
* Trial of PadSynth random width control done.

2020-6-5 Will
* Added line in AddNote.cpp ring mod code for amp mod.
  Commented out, but there for trials.
* General cleanups and removed reduntant code.
* BugFix: Request for invalid root reports, but still sets it!

2020-6-4 Will
* First trial of AddSynth Gobal random width control.
  Has partial legacy compatibility.

2020-6-3 Will
* Unified random panning, with variable position and width.
  Fixed values until parameter setup and control done,
  but follows pan law.

2020-5-30 Will
* CLI only shows GUI sys/ins effect changes when visible.
  Updates the settings but doesn't change selection shown.

2020-5-27 Will
* GUI and CLI fully in sync for Add, Sub, Pad enables.
  Includes correct action for kit mode.

2020-5-20 Will
* Separated out CLI SubSynth and PadSynth overtones.
* Separated out CLI de-pop and punch.
* Separated remaining CLI controls and deleted partCommon

2020-5-19 Will
* Fixed regression CLI not enabling PadSyth.
* Separated out CLI engine detune controls.

2020-5-17 Will
* Moved CLI part specific controls from Common to Part.
  Don't know why they were in Common anyway.
* Changed CLI kit mode Disable to Normal.
  Clearer, and less chance of confusion.

2020-5-16 Will
* Separated out part, engine, kit enable controls.
  This actually slightly reduces the code, and reduces
  complexity significantly.
  There may be some GUI anomalys when CLI controlled.

2020-5-15 Will
* Separated out CLI engine level volume, pannning, velocity.
  This results in doplication but less complexity, and
  less chance of control additions causing problem,

2020-5-14 Will
* BugFix: Reverb type to bandwidth not resetting BW control.
* Corrected some controls still using direct numbers.
* Note On/Off fully respects multiple same note in Poly mode.
* Added 'Cracked Chimes' to Companion bank.
* Moved '.config/yoshimi/yoshimi.history' to:
  '.local/share/yoshimi/recent'