@@ -41,7 +41,7 @@ class SUBnoteParameters : public Presets
         SUBnoteParameters(SynthEngine *_synth);
         ~SUBnoteParameters();
         void setPan(char pan, unsigned char panLaw);
-        bool randomPan(void) { return !PPanning; }
+        //bool randomPan(void) { return !PPanning; }
         void add2XML(XMLwrapper *xml);
         void defaults(void);
         void getfromXML(XMLwrapper *xml);
@@ -52,6 +52,8 @@ class SUBnoteParameters : public Presets
         bool Pstereo; // true = stereo, false = mono
         unsigned char PVolume;
         unsigned char PPanning;
+        bool PRandom;
+        unsigned char PWidth;
         float pangainL;         // derived from PPanning
         float pangainR;         // ^^
         unsigned char PAmpVelocityScaleFunction;
