@@ -2,6 +2,8 @@ yoshimi 1.7.1 M
 
 2020-6-5 Will
 * Trial of PadSynth random width control done.
+* Trial of SubSynth random width control done.
+* Added forgotten PadSynth random load and save :(
 
 2020-6-5 Will
 * Added line in AddNote.cpp ring mod code for amp mod.
